index画面につぶやきを表示するようにした

--- a/views/index.jade
+++ b/views/index.jade
@@ -18,6 +18,25 @@ block content
           td
             input(type="submit" value="ログイン")
     hr
+    table(border="1")
+      tr
+        th.date 更新日時
+        th.pict 名前
+        th.tweet つぶやき
+        - i = 0;
+        each d in docs
+          tr
+            td #{d.tweet[(d.tweet.length-1)].date}
+            td 
+              div
+                img(src="images/#{d.tweet[(d.tweet.length-1)].feeling}.png")
+              div 
+                form(action="personal", method="post")
+                  input(type="submit", value="#{d.name}")
+                  input(type="hidden", value="#{d._id}", name="db_id")
+            td #{d.tweet[(d.tweet.length-1)].word}
+          - i++;
+    hr
     div
       form(action="/", method="post")
         input("text", name="name")
