--- a/views/confirm.jade
+++ b/views/confirm.jade
@@ -4,17 +4,21 @@ block content
   h1 Confirm Page
   p Please check your information.
   div#content
+    div よろしいですか？(※今のところ一度登録したら変更できません)
     table(border="1")
       tr
-        th user name
-        th password
+        th ユーザーID
+        th パスワード
+        th 表示名
       tr
-        td #{name}
+        td #{id}
         td #{pass}
+        td #{name}
     div
       form(action="timeline", method="post")
-        input(type="hidden", value="#{name}", name="new_name")
+        input(type="hidden", value="#{id}", name="new_id")
         input(type="hidden", value="#{pass}", name="new_pass")
+        input(type="hidden", value="#{name}", name="new_name")
         input(type="submit" value="OK")
       form(action="/", method="get")
         input(type="submit" value="Cancel")
