ユーザー追加のデータベース形式の変更

--- a/views/confirm.jade
+++ b/views/confirm.jade
@@ -15,7 +15,7 @@ block content
         td #{pass}
         td #{name}
     div
-      form(action="timeline", method="post")
+      form(action="addUser", method="post")
         input(type="hidden", value="#{id}", name="new_id")
         input(type="hidden", value="#{pass}", name="new_pass")
         input(type="hidden", value="#{name}", name="new_name")
