--- a/views/index.jade
+++ b/views/index.jade
@@ -25,7 +25,7 @@ block content
     - }
     hr
     - if(docs.length != 0){
-      form(method='post',action='tweet')
+      form(method='post',action='tweetCheck')
         table
           tr
             td
@@ -49,7 +49,8 @@ block content
               input(type="radio" name="feeling" value="bad")
             td
               input(type="radio" name="feeling" value="sad")
-        input(type='text')
+        input(type='hidden', name='id', value="#{id}")
+        input(type='text', name="tweet")
         input(type="submit" value="つぶやく")
     - }
     
