--- a/views/tweetCheck.jade
+++ b/views/tweetCheck.jade
@@ -16,7 +16,7 @@ block content
           img(src="images/#{feeling}.png")
         td #{tweet}
     div
-      form(action="addUser", method="post")
+      form(action="addTweet", method="post")
         input(type="hidden", value="#{date}", name="new_date")
         input(type="hidden", value="#{feeling}", name="new_feeling")
         input(type="hidden", value="#{tweet}", name="new_tweet")
