リリースノート追加

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,18 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    hr
+    div Release Note
+      table(border="1")
+        tr
+          td 2016-02-18(Thu)
+          td Ver 1.0
+          td 
+            li プロトタイプ
+        tr
+          td 2016-02-22(Mon)
+          td Ver1.1
+          td 
+            li パスワード機能削除
+            li リリースノート表示
+            li つぶやきの表示順のソート(新しい物が上に来る)
