--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title インキュにこにこカレンダー
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
@@ -17,6 +17,14 @@ html
           td 2016-02-22(Mon)
           td Ver1.1
           td 
+            li 二回目のつぶやきで落ちるバグ修正
             li パスワード機能削除
             li リリースノート表示
             li つぶやきの表示順のソート(新しい物が上に来る)
+        tr
+          td 2016-02-24(Wed)
+          td Ver 1.2
+          td
+            li つぶやきの入力欄を広げた
+            li アイコンの縮小
+            li 名前と気分を横に並べた
