--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,3 +28,9 @@ html
             li つぶやきの入力欄を広げた
             li アイコンの縮小
             li 名前と気分を横に並べた
+        tr
+          td 2016-03-01(Tue)
+          td Ver 1.3
+          td
+            li セッション時間延長
+            li 更新ボタン作成
