とりあえず動いた

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title インキュにこにこカレンダー
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/javascripts/desktopNotification.js', charset='UTF-8')
   body
     block content
     hr
