--- a/views/index.jade
+++ b/views/index.jade
@@ -28,6 +28,7 @@ block content
                 input(type="submit" value="更新")
     - }
     hr
+    input(type="button" onClick='send("hoge","こんにちわ","images/happy.png")')
     - if(docs.length != 0){
       form(method='post',action='tweetCheck')
         table
