--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,5 +33,12 @@ html
           td 2016-03-01(Tue)
           td Ver 1.3
           td
-            li セッション時間延長
+            li セッション時間延長(24時間)
             li 更新ボタン作成
+        tr
+          td 2016-03-03(Thu)
+          td Ver 2.0
+          td
+            li デスクトップ通知機能追加
+            li デフォルト表示を最新20件だけ表示するタイムラインに変更
+            li 全員の情報の最新を表示するページを作成
