--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,12 @@ html
       table(border="1")
         tr
           td 2016-03-03(Thu)
+          td Ver 2.1
+          td
+            li いいねボタン追加
+            li 画面の自動更新
+        tr
+          td 2016-03-03(Thu)
           td Ver 2.0
           td
             li デスクトップ通知機能追加
